--- a/src/public/index.html
+++ b/src/public/index.html
@@ -98,6 +98,8 @@
       opacity: 0;
       animation: fadeIn 3s linear 1s;
       animation-fill-mode: forwards;
+      height: 100%;
+      width: 100%;
     }
     .main {
       position: relative;
