--- a/src/public/index.html
+++ b/src/public/index.html
@@ -9,7 +9,7 @@
         links to use whenever you have to share a sensitive URL in a chat or
         email."
     />
-    <meta name="viewport" content="width=device-width" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <style>
     /* Reset */
@@ -98,8 +98,6 @@
       opacity: 0;
       animation: fadeIn 3s linear 1s;
       animation-fill-mode: forwards;
-      height: 100%;
-      width: 100%;
     }
     .main {
       position: relative;
@@ -280,7 +278,7 @@
         opacity: 0;
       }
       100% {
-        opacity: 0.05;
+        opacity: 0.08;
       }
     }
 
