--- a/src/public/index.html
+++ b/src/public/index.html
@@ -202,7 +202,7 @@
       border: 0;
       width: clamp(180px, 100%, 220px);
       min-width: 0;
-      flex-shrink: 1;
+      flex-grow: 1;
       height: 50px;
       padding: 0 2em 0 1.5em;
       font: inherit;
