--- a/src/public/l/index.html
+++ b/src/public/l/index.html
@@ -28,7 +28,7 @@
       }, 3000)
     }
 
-    document.body.innerText = 'Redirect…'
+    document.body.innerText = 'Redirecting…'
 
     if (!alias || typeof alias !== 'string') {
       document.body.innerText = 'Invalid alias.'
