--- a/src/public/l/index.html
+++ b/src/public/l/index.html
@@ -9,6 +9,8 @@
         links to use whenever you have to share a sensitive URL in a chat or
         email."
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="robots" content="noindex" />
   </head>
 
   <script type="module">
