--- a/src/public/index.html
+++ b/src/public/index.html
@@ -89,9 +89,9 @@
       background: linear-gradient(-45deg, #220711, #031115, #041a15);
       background-size: 400% 400%;
       animation: gradient 15s ease infinite;
-      height: 100%;
+      min-height: 100%;
       display: grid;
-      grid-template-rows: 7fr 1fr 1fr;
+      grid-template-rows: 5fr 1fr 1fr;
     }
 
     a {
@@ -140,6 +140,7 @@
     .success,
     .error {
       display: flex;
+      font-size: small;
       margin-top: 1.5em;
       background-color: rgba(0, 0, 0, 0.3);
       padding: 0.8em;
