--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,6 +17,8 @@
       src="https://plausible.io/js/script.exclusions.js"
       data-exclude="/l/*"
     ></script>
+
+    <link rel="stylesheet" href="button.css" />
   </head>
   <style>
     /* Reset */
@@ -75,6 +77,7 @@
       --padding: min(5vw, 2em);
       --error: #dd1b76;
       --success: #1bdd8c;
+      --button-bg: #111;
     }
 
     html {
@@ -231,12 +234,13 @@
       border: none;
       outline: none;
       color: #fff;
-      background: #111;
+      background: var(--button-bg);
       cursor: pointer;
       position: relative;
       text-transform: uppercase;
       border-top-right-radius: var(--border-radius);
       border-bottom-right-radius: var(--border-radius);
+      z-index: 1;
     }
 
     .description,
@@ -325,7 +329,9 @@
               placeholder="https://example.com"
             />
 
-            <button class="button" type="submit">Create link</button>
+            <button class="button bubbly-button" type="submit">
+              Create link
+            </button>
           </div>
         </form>
         <div class="template"></div>
@@ -364,9 +370,11 @@
     </footer>
 
     <template id="error">
-      <div class="template error">
-        <div>Error:&nbsp;</div>
-        <div class="message">Something went wrong.</div>
+      <div class="template">
+        <div class="error">
+          <div>Error:&nbsp;</div>
+          <div class="message">Something went wrong.</div>
+        </div>
       </div>
     </template>
 
@@ -385,6 +393,23 @@
 
     const form = document.getElementById('form')
     form.addEventListener('submit', handleSubmit)
+
+    var animateButton = function (e) {
+      e.preventDefault
+      //reset animation
+      e.target.classList.remove('animate')
+
+      e.target.classList.add('animate')
+      setTimeout(function () {
+        e.target.classList.remove('animate')
+      }, 700)
+    }
+
+    var bubblyButtons = document.getElementsByClassName('bubbly-button')
+
+    for (var i = 0; i < bubblyButtons.length; i++) {
+      bubblyButtons[i].addEventListener('click', animateButton, false)
+    }
 
     function handleSubmit(event) {
       event.preventDefault()
@@ -413,7 +438,6 @@
       // Cleanup
       const collection = document.getElementsByClassName('template')
 
-      console.log(collection)
       for (var i = 0; i < collection.length; ++i) {
         collection[i].remove()
       }
@@ -428,5 +452,6 @@
       form.appendChild(clone)
     }
   </script>
+
   <script src="matrix.js"></script>
 </html>
