--- a/src/public/index.html
+++ b/src/public/index.html
@@ -5,9 +5,13 @@
     <title>Br3f - Anonymous One-time URL Redirects</title>
     <meta
       name="description"
-      content="Leave no trace. Create disguised, one-time redirect
-        links to use whenever you have to share a sensitive URL in a chat or
-        email."
+      content="Leave no trace. Use disposable redirect
+        links to share sensitive URLs in a chat or
+        email. Secure. Disposable. Anonymous."
+    />
+    <meta
+      name="keywords"
+      content="Secure and disposable redirect links, Anonymous URL Shortener"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -160,7 +164,8 @@
     }
 
     .copied {
-      padding: 1em;
+      display: inline-flex;
+      padding: 0.8em;
       opacity: 0;
       animation: copied 3s;
       animation-fill-mode: forwards;
