--- a/src/public/index.html
+++ b/src/public/index.html
@@ -319,7 +319,7 @@
     <canvas id="matrix" width="100%" height="100%"></canvas>
     <main class="main">
       <div class="logo">br3f.<small>com</small></div>
-      <h1>Create a one-time anonymous link.</h1>
+      <h1>Disposable URL Redirects</h1>
 
       <div class="content" id="content">
         <form name="url-form" id="form" class="form">
