--- a/src/public/index.html
+++ b/src/public/index.html
@@ -319,7 +319,7 @@
     <canvas id="matrix" width="100%" height="100%"></canvas>
     <main class="main">
       <div class="logo">br3f.<small>com</small></div>
-      <h1>Disposable URL Redirects</h1>
+      <h1>One-time URL Redirects</h1>
 
       <div class="content" id="content">
         <form name="url-form" id="form" class="form">
@@ -345,9 +345,9 @@
 
     <aside class="description">
       <small>
-        Leave no trace. With br3f you can create disguised, one-time redirect
-        links. Use it whenever you have to share a sensitive URL in a chat or
-        email.
+        Leave no trace. With br3f you can create disguised and disposable
+        redirect links. Use it whenever you have to share a sensitive URL in a
+        chat or email.
       </small>
     </aside>
 
