Add lang attribute

--- a/src/public/index.html
+++ b/src/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>Br3f - Anonymous One-time URL Redirects</title>
