--- a/src/public/index.html
+++ b/src/public/index.html
@@ -22,6 +22,10 @@
       data-exclude="/l/*"
     ></script>
 
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+
     <link rel="stylesheet" href="button.css" />
     <link rel="stylesheet" href="styles.css" />
   </head>
