--- a/src/public/index.html
+++ b/src/public/index.html
@@ -22,6 +22,7 @@
       data-exclude="/l/*"
     ></script>
 
+    <link rel="alternate" hreflang="x-default" href="https://www.br3f.com" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
